Fix scrollbar in error window

--- a/src/styles/status-display/index.scss
+++ b/src/styles/status-display/index.scss
@@ -58,7 +58,10 @@
 
 .error-info {
   max-height: 13rem;
-  overflow-y: scroll;
+
+  &.long {
+    overflow-y: scroll;
+  }
 }
 
 .error-header {
